# Folded-Bias-Decomposition-paper

./: .gitignore  CODE_OCEAN.md  README.md  REPRODUCIBILITY.md  RUN_ALL_COMPARISONS.md  compare_abc_mapped_metrics.py  compare_cirkit_qca_stmg.py  compare_vivado_stats.py  final_generator.py  generate_cross_tool_wlt.py  generate_intro_motivation_artifact.py  generate_paper_package.py  generate_vivado_paper_package.py  reproduce_all_artifacts.sh  reproduce_paper.sh  run.sh
docs/: REPRODUCIBILITY.md
results/: abc_mapped_compare_5_51.csv  abc_mapped_summary_5_51.csv  cirkit_qca_stmg_compare_5_51.csv  maj1015_generated_canon.v  maj11_generated_canon.v  maj15_generated_canon.v  maj17_generated_canon.v  maj19_generated_canon.v  maj21_generated_canon.v  maj31_generated_canon.v  maj41_generated_canon.v  maj43_generated_canon.v  maj51_generated_canon.v  raw_light_metrics_5_15.csv  raw_light_metrics_5_51.csv
results/baseline_threshold/: maj_baseline_strict_11.blif  maj_baseline_strict_127.blif  maj_baseline_strict_13.blif  maj_baseline_strict_23.blif  maj_baseline_strict_41.blif  maj_baseline_strict_7.blif
results/folded_bias_carryonly/: maj_fb_carryonly_11.blif  maj_fb_carryonly_15.blif  maj_fb_carryonly_7.blif
results/folded_bias_threshold/: maj_fb_10015.blif  (+13 more)
scripts/: compare_abc_mapped_metrics.py  compare_cirkit_qca_stmg.py  compare_raw_light_metrics.py  compare_vivado_stats.py  final_generator.py  generate_paper_package.py  generate_vivado_paper_package.py
tools/mockturtle_mig_opt/: CMakeLists.txt  README.md
tools/mockturtle_mig_opt/src/: mockturtle_mig_opt.cpp
(+68 files in other folders)
